WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207983
[LFC][BFC] Fix geometryForBox::isOkToAccessDisplayBox for EscapeReason::FindFixedHeightAncestorQuirk
https://bugs.webkit.org/show_bug.cgi?id=207983
Summary
[LFC][BFC] Fix geometryForBox::isOkToAccessDisplayBox for EscapeReason::FindF...
alan
Reported
2020-02-19 18:43:06 PST
ssia
Attachments
Patch
(4.93 KB, patch)
2020-02-19 19:04 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-19 18:43:55 PST
<
rdar://problem/59615246
>
alan
Comment 2
2020-02-19 19:04:16 PST
Created
attachment 391244
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-20 07:36:50 PST
Comment on
attachment 391244
[details]
Patch Clearing flags on attachment: 391244 Committed
r257059
: <
https://trac.webkit.org/changeset/257059
>
WebKit Commit Bot
Comment 4
2020-02-20 07:36:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug