[LFC][BFC] Fix geometryForBox::isOkToAccessDisplayBox for EscapeReason::FindFixedHeightAncestorQuirk https://bugs.webkit.org/show_bug.cgi?id=207983 <rdar://problem/59615246>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/height-percentage-quirk-to-icb.html

The height percentage quirk walks the ancestor chain and looks for fixed height block level boxes.
It can potentially walk all the way up to the ICB. This patch gives access to the ICB's geometry when
FormattingContext::geometryForBox() has EscapeReason::FindFixedHeightAncestorQuirk.

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::geometryForBox const):

LayoutTests:

* fast/layoutformattingcontext/height-percentage-quirk-to-icb-expected.html: Added.
* fast/layoutformattingcontext/height-percentage-quirk-to-icb.html: Added.


Canonical link: https://commits.webkit.org/220972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257059 268f45cc-cd09-0410-ab3c-d52691b4dbfc